# opencritic_reviews_analysis

./: game_reviews.ipynb  pyproject.toml
.ipynb_checkpoints/: game_reviews-checkpoint.ipynb
