[tool.poetry]
name = "game_analysis"
version = "0.1.0"
description = ""
authors = ["Terje Espedal <terje.m.espedal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.1"
pandas = "^1.2.3"
numpy = "^1.20.2"
seaborn = "^0.11.1"
jupyterlab = "^3.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
